<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/bule"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="55dp"
            android:layout_height="55dp"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/textView_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="SMPOS"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"
            app:cardCornerRadius="14dp" >

        <LinearLayout
            android:id="@+id/LinearLayout_restore_drive"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bule"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/outgoing" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/sell"
                android:textSize="18sp"
                android:textColor="@color/white" />
        </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardCornerRadius="14dp">

            <LinearLayout
                android:id="@+id/LinearLayout_buckup_drive"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/bule"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/incoming" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/buy"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"
            app:cardCornerRadius="14dp" >

        <LinearLayout
            android:id="@+id/LinearLayout3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bule"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/suppliers" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/suppliers"
                android:textSize="18sp"
                android:textColor="@color/white" />

        </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"
            app:cardCornerRadius="14dp" >

        <LinearLayout
            android:id="@+id/LinearLayout4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bule"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/leader" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="18sp"
                android:text="@string/customers"
                android:textColor="@color/white" />

        </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"
            app:cardCornerRadius="14dp" >

        <LinearLayout
            android:id="@+id/LinearLayout6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bule"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/analysis" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/history"
                android:textSize="18sp"
                android:textColor="@color/white" />

        </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"
            app:cardCornerRadius="14dp" >

        <LinearLayout
            android:id="@+id/LinearLayout5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bule"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/products" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/stock"
                android:textSize="18sp"
                android:textColor="@color/white" />

        </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"
            app:cardCornerRadius="14dp" >

        <LinearLayout
            android:id="@+id/ButtonLinearLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bule"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ButtonimageView1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/baseline_settings_24" />

        </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"
            app:cardCornerRadius="14dp" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ButtonLinearLayout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/bule"
                app:layout_constraintEnd_toEndOf="@+id/ButtonimageView2"
                app:layout_constraintStart_toEndOf="@+id/ButtonimageView2">

                <ImageView
                    android:id="@+id/ButtonimageView2"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/notification"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.5" />

                <TextView
                    android:id="@+id/textView_num_notification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_bg"
                    android:padding="5dp"
                    android:text="10"
                    android:textSize="12sp"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.65"
                    app:layout_constraintStart_toEndOf="@+id/ButtonimageView2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.4" />



            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"
            app:cardCornerRadius="14dp" >

        <LinearLayout
            android:id="@+id/ButtonLinearLayout3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bule"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ButtonimageView3"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/cryptography" />


        </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"
            app:cardCornerRadius="14dp" >

        <LinearLayout
            android:id="@+id/ButtonLinearLayout4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bule"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ButtonimageView4"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/baseline_info_24" />

        </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

    </LinearLayout>


</LinearLayout>